@@ -1,3 +1,6 @@
+[B]1.1.6[/B]
+- fixed: can't get search list and plot because site change
+
 [B]1.1.5[/B]
 - fixed: can't get some actor message
 - get more movie post
